# math-magik-qprop

./: .bumpversion.cfg  .gitignore  CHANGES  Makefile  README.rst  pyproject.toml  requirements.in  requirements.txt  run  tqprop
book/: _config.yml  _toc.yml
book/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
book/_build/.doctrees/content/: bibliography.doctree
book/_build/html/: .buildinfo  genindex.html  intro.html  search.html  searchindex.js
book/_build/html/_sources/: intro.md
book/_build/html/content/: bibliography.html
book/_build/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb
book/assets/: references.bib
book/content/appendix/.ipynb_checkpoints/: standard-atmosphere-checkpoint.ipynb
book/content/development/.ipynb_checkpoints/: testing-setup-checkpoint.ipynb
book/content/guide/: command-line.ipynb
data/: default_prop
docs/: genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html  mmqprop.html
docs/_modules/mmqprop/: Context.html  EventLoop.html  Motor.html  Propeller.html  StdAtm.html  file_io.html
docs/content/: bibliography.html
docs/content/appendix/: Untitled.html  installing-basic-tools.html  standard-atmosphere.html
docs/content/development/: api.html  command-loop.html  testing-setup.html
docs/content/guide/: command-line.html
docs/content/start/: project-setup.html
mk/: python.mk  qprop.mk  version.mk
mmqprop/: Circulation.py  Context.py  EventLoop.py  Motor.py  Propeller.py  Runner.py  StdAtm.py  __init__.py  __main__.py  cli.py  file_io.py
mmqprop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
mmqprop/commands/: cmd_debug.py  cmd_load_motor.py  cmd_load_propeller.py  cmd_set_propfile.py  cmd_versions.py
tests/: test_version.py
(+28 files in other folders)
