# pyproject.toml
[project]
name = "mmqprop"
version = "0.1.0"
license = {text = "BSD-3-Clause"}

authors = [{name = "Roie R. Black", email = "roie.black@gmail.com"}]
description = "Python implementation of Drela's QProp program"
readme = "README.rst"
classifiers = [
	'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
	'Programming Language :: Python :: 3.10',
    'Topic :: Software Development :: Testing',
]
dependencies = [
	"pytest",
]

[project.urls]
homepage = "https://github.com/rblack42/math-magik-qprop"
documentation = "https://rblack42.github.io/math-magik-qprop"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
mmqprop = "mmqprop.cli:cli"

[tool.setuptools.packages.find]
where = [""]
include = ["mmqprop*"]
exclude = [""]
namespaces = false 
